<resources>
    <string name="app_name" translatable="false">Chefies</string>
    <string name="tagLine" translatable="false">Your Chef In Emergency Situation</string>
    <string name="fill_the_title">Fill the title</string>
    <string name="save">Save</string>
    <string name="result_image">Unser Input Image</string>
    <string name="home_text">Home</string>
    <string name="history_text">History</string>
    <string name="action_to_show_option_take_image_text">action to show option take image</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_intro_title">Welcome to us,</string>
    <string name="sign_up_intro_sub_title">Hello there, create New account</string>
    <string name="illustration">Illustration</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loading">Loading…</string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in_intro_title">Welcome Back</string>
    <string name="sign_in_intro_sub_title">Hello there, sign in to continue</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="ingredients">Ingredients:</string>
    <string name="steps">Steps</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="invalid_name">Name must be more than 3 letters</string>
    <string name="invalid_email">The email format you entered is incorrect</string>
    <string name="invalid_password">Password must be more than 8 letters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="setting_text">Setting</string>
    <string name="username">Mr. Chefies</string>
    <string name="confirm_logout_title">CONFIRM LOGOUT</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="confirm_logout_message">Are you sure want to logout ?</string>
    <string name="change_password_text">Change Password</string>
    <string name="language_text">Language</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="logout_text">Log Out</string>
    <string name="password_icon_text">Password icon</string>
    <string name="welcome_text">Hai Chef, \nWhat ingredients do you \nhave today?</string>
    <string name="are_you_sure_want_to_leave">Are you sure want to leave?</string>
    <string name="this_result_will_not_be_saved">This result will not be saved!</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="icon_gallery">Icon Gallery</string>
    <string name="icon_camera">Icon Camera</string>
    <string name="icon_edit">Icon Edit</string>
    <string name="icon_delete">Icon Delete</string>
    <string name="get_suggestions">Get Suggestions</string>
    <string name="type_your_ingredients">Type your ingredients</string>
    <string name="please_add_or_update_your_ingredients">Please add or update your ingredients</string>
    <string name="invalid_min3_characters">Please input at least 3 characters</string>
    <string name="delete_title">Delete!</string>
    <string name="delete_message">Are you sure want to delete this item?</string>
    <string name="update_ingredient">Update Ingredient</string>
    <string name="edit_your_ingredient">Edit your ingredient</string>
    <!-- Ingredients -->
    <string name="banana">Banana</string>
    <string name="shallot">Shallot</string>
    <string name="tomato">Tomato</string>
    <string name="garlic">Garlic</string>
    <string name="egg">Egg</string>
    <string name="try_again">Try again</string>
    <string name="icon_error">Icon Error</string>
    <string name="something_wrong">Something Wrong!</string>
    <string name="icon_success">Icon Success</string>
    <string name="success">Success</string>
    <string name="success_registered">You have successfully registered</string>
    <string name="success_login">You have successfully login</string>
    <string name="success_update_profile">You have successfully update profile</string>
    <string name="success_change_password">You have successfully change password</string>
    <string name="apology_text">Oops… Sorry :(</string>
    <string name="manual_input_suggestion_txt">Cannot detect food ingredients, You can enter them manually</string>
    <string name="history_title_txt">Psssttttt… \nThis is your secret recipe</string>
    <string name="profile_icon_txt">Profile icon</string>
    <string name="change_profile_txt">Change Profile</string>
    <string name="empty_histoy_image_txt">Empty histoy image</string>
    <string name="type_your_new_password_txt">Type your new password</string>
    <string name="type_your_old_password_txt">Type your old password</string>
    <string name="successful_change_password_banner_txt">Successful change password image</string>
    <string name="cp_successfully_title_txt">Change password successfully!</string>
    <string name="cp_successfully_desc_txt">You have successfully change password. \nPlease use the new password when Sign in.</string>
    <string name="ok_txt" translatable="false">OK</string>
    <string name="your_photo_result_txt">Your Photo Result</string>
    <string name="type_your_name_txt">Type your name</string>
    <string name="upload_your_photo_txt">Upload your photo</string>
    <string name="upload_txt">Upload</string>
    <string name="apology_desc_txt">Recipe not available for this ingredients, replace or add another ingredient.</string>
    <string name="success_get_recipes_txt">Success Get Recipes</string>
    <string name="failed_to_get_recipes_txt">Failed to get recipes:</string>
    <string name="this_ingredient_already_added_txt">This ingredient already added</string>
    <string name="saved_text">Saved</string>
    <string name="unsuccess_get_avatar">Avatar not found or unable to download avatar</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="failed_to_get_image_uri">Failed to get image URI</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="failed_to_regenerate_recipe">There is an error, please try again!</string>
    <string name="success_logout">Success Logout</string>
    <string name="move_activity_action_txt">move activity action</string>
    <string name="languange_icon_txt">languange icon</string>
    <string name="dark_mode_icon_txt">dark mode icon</string>
    <string name="logout_icon">logout icon</string>
    <string name="facts">Facts</string>
    <string name="new_password_txt">new password</string>
    <string name="old_password_txt">old password</string>
</resources>