<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.main.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_activity"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:includeFontPadding="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            app:fontFamily="@font/poppins_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/username" />

        <RelativeLayout
            android:id="@+id/change_profile_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username">

            <ImageView
                android:id="@+id/iv_profile_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_round_profile"
                android:contentDescription="@string/profile_icon_txt"
                android:padding="12dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/iv_profile_icon"
                android:text="@string/change_profile_txt"
                android:textSize="16sp"
                app:fontFamily="@font/poppins_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/move_activity_action_txt"
                android:src="@drawable/ic_arrow_next_gray" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/softGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_profile_setting" />

        <RelativeLayout
            android:id="@+id/change_password_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_profile_setting">

            <ImageView
                android:id="@+id/iv_password_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_round_language"
                android:contentDescription="@string/password_icon_text"
                android:padding="12dp"
                android:src="@drawable/ic_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/iv_password_icon"
                android:text="@string/change_password_text"
                android:textSize="16sp"
                app:fontFamily="@font/poppins_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/move_activity_action_txt"
                android:src="@drawable/ic_arrow_next_gray" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/softGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_password_setting" />

        <RelativeLayout
            android:id="@+id/language_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_password_setting">

            <ImageView
                android:id="@+id/iv_language_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_round_language"
                android:contentDescription="@string/languange_icon_txt"
                android:padding="12dp"
                android:src="@drawable/ic_language" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/iv_language_icon"
                android:text="@string/language_text"
                android:textSize="16sp"
                app:fontFamily="@font/poppins_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/move_activity_action_txt"
                android:src="@drawable/ic_arrow_next_gray" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/softGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/language_setting" />

        <RelativeLayout
            android:id="@+id/dark_mode_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/language_setting">

            <ImageView
                android:id="@+id/iv_dark_mode"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_round_dark_mode"
                android:contentDescription="@string/dark_mode_icon_txt"
                android:padding="12dp"
                android:src="@drawable/ic_dark_mode" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/iv_dark_mode"
                android:text="@string/dark_mode_text"
                android:textSize="16sp"
                app:fontFamily="@font/poppins_medium" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:minHeight="48dp"
                android:theme="@style/darkModeSwitch"
                app:switchMinWidth="50dp" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/softGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dark_mode_setting" />

        <RelativeLayout
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dark_mode_setting">

            <ImageView
                android:id="@+id/iv_logout_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_round_logout"
                android:contentDescription="@string/logout_icon"
                android:padding="12dp"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/iv_logout_icon"
                android:text="@string/logout_text"
                android:textSize="16sp"
                app:fontFamily="@font/poppins_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/move_activity_action_txt"
                android:src="@drawable/ic_arrow_next_gray" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/content_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/content_layout"
        app:layout_constraintTop_toTopOf="@+id/content_layout"
        tools:src="@drawable/ic_profile_pic" />

</androidx.constraintlayout.widget.ConstraintLayout>