<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".SuccessfulCPActivity">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="?attr/colorOnSurface"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/ivSuccessCP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/successful_change_password_banner_txt"
        android:src="@drawable/successful_change_password_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tvSuccessCPTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/cp_successfully_title_txt"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSuccessCP" />

    <TextView
        android:id="@+id/tvSuccessCPDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/cp_successfully_desc_txt"
        android:textSize="14sp"
        android:textColor="?attr/colorOnBackground"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSuccessCPTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:enabled="true"
        android:text="@string/ok_txt"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSuccessCPDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>