<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    android:elevation="10dp"
    android:layout_gravity="center"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:contentDescription="@string/icon_error"
            android:src="@drawable/ic_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/something_wrong"
            android:textSize="20sp"
            android:includeFontPadding="false"
            android:textColor="@color/red"
            app:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Email has been used"
            android:textSize="14sp"
            android:includeFontPadding="false"
            android:layout_marginTop="3dp"
            app:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:id="@+id/btnTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:padding="0dp"
            android:text="@string/try_again"
            android:textSize="14sp"
            android:includeFontPadding="false"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@+id/message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>